# python3-tutorial

./: README.md  docker-compose.yml  dupfind.py
algolia/: algoliatest.py  requirements.txt
keyring/: keyring-test.py
logging/: README.md
logging/disable_existing_loggers/: disable_existing_loggers.py
logging/logger_tree/: main.py  my_module.py
logging/logging_config_json/: logging.json  logging_json.py
logging/logging_smtphandler/: log_to_mail.py
logging/logging_traceback/: logging.json.ini  lowermodule.py  requirements.txt
logging/slack_handler/: slacklogger.py
office365/onedrive-sdk/: README.md  onedrive.py
opencv/: README.md  detectface.py  mozaic.py
scrapy/: README.md  docker-compose.yml
scrapy/crawldownload/: Makefile
scrapy/crawldownload/analysis/: Item_analysis.md  url_to_localpath.py
scrapy/crawldownload/crawldownload/: ipa.json  scrapy.cfg
scrapy/moneyforward/: scrapy_runner.sh
scrapy/scrapy_splash_tutorial/: result.json  scrapy.cfg
scrapy/scrapy_tutorial_quotes/: author.json
scrapy/spider_signals/: Makefile  scrapy.cfg
scrapy/splash_exception/: Makefile
sendmail/: sendmail.py
setuptools/data_include_package/: MANIFEST.in  README.md  setup.cfg
setuptools/data_include_package/src/packagedata/: getpackagedata.py
setuptools/min_package/: .gitignore  Makefile  setup.cfg
setuptools/min_package/src/consoleapp/: cli.py
setuptools/min_package/test/: test_mypackage.py
slack_webhook/: README.md  slack_webhook.py
streamlit/: docker-compose.yml  dynamodb_connect.py  helloworld.py  requirements.txt  run.sh
(+25 files in other folders)
