[metadata]
name = console_scripts
version = attr: src.__version__
url = https://xxxxxxxxxxxxxxxxxxxxx
author = XXXXXXXXXX
author_email = xxxxxxx@xxxxxxxxxxxx
license_file = LICENSE
description = console scripts
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =

[options.extras_require]
dev =
  pytest

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  consapp = consoleapp:main
